dynamodel_tests/tests/fails/unnamed_fields.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
struct TupleStruct(String);

fn main() {}
